[gd_scene load_steps=11 format=3 uid="uid://fopof7how"]

[ext_resource type="Script" path="res://scripts/levels/0-2_characterCreation.gd" id="1_tuaof"]
[ext_resource type="Theme" uid="uid://dctbregm4ijln" path="res://assets/themes/buttonTheme.tres" id="2_jb8hu"]
[ext_resource type="Theme" uid="uid://bajr2k60ueqkc" path="res://assets/themes/headerTheme.tres" id="2_xsp0k"]
[ext_resource type="Texture2D" uid="uid://blgu75ptl5at2" path="res://assets/WIP/greenBord.png" id="3_28fvm"]
[ext_resource type="Texture2D" uid="uid://bnxmji1of1ldn" path="res://assets/WIP/pinkSound.png" id="4_jy5lg"]
[ext_resource type="Texture2D" uid="uid://vlq0qaph53ek" path="res://assets/WIP/blueSound.png" id="5_dmrhp"]
[ext_resource type="Texture2D" uid="uid://du2k6n0lnlmpf" path="res://assets/WIP/amongRed.png" id="6_opftc"]
[ext_resource type="Texture2D" uid="uid://wu5ae714rjc4" path="res://assets/WIP/amongBlue.png" id="7_bddyq"]
[ext_resource type="Texture2D" uid="uid://dfospmj2j8o0c" path="res://assets/WIP/amongOrange.png" id="8_uo287"]
[ext_resource type="Texture2D" uid="uid://07eo6dgtkaik" path="res://assets/WIP/amongPink.png" id="9_fxh0o"]

[node name="CharacterCreation" type="Node2D"]
script = ExtResource("1_tuaof")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CCmenu" type="TextureRect" parent="CanvasLayer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
texture = ExtResource("3_28fvm")
expand_mode = 0
stretch_mode = 0
flip_h = false
flip_v = false
script = null

[node name="Label" type="Label" parent="CanvasLayer/CCmenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.15
theme = ExtResource("2_xsp0k")
text = "Who are you?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CCmenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.15
anchor_right = 0.75
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Pronouns" type="VBoxContainer" parent="CanvasLayer/CCmenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/CCmenu/VBoxContainer/Pronouns"]
layout_mode = 2
theme = ExtResource("2_xsp0k")
text = "Pronouns"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CCmenu/VBoxContainer/Pronouns"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="She" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Pronouns/HBoxContainer" groups=["pronounButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
toggle_mode = true
text = "She/Her"

[node name="He" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Pronouns/HBoxContainer" groups=["pronounButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
toggle_mode = true
text = "He/Him"

[node name="They" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Pronouns/HBoxContainer" groups=["pronounButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
toggle_mode = true
text = "They/Them"

[node name="Voice" type="VBoxContainer" parent="CanvasLayer/CCmenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/CCmenu/VBoxContainer/Voice"]
layout_mode = 2
theme = ExtResource("2_xsp0k")
text = "Voice"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CCmenu/VBoxContainer/Voice"]
layout_mode = 2
size_flags_stretch_ratio = 0.2
theme_override_constants/separation = 50

[node name="Voice1" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Voice/HBoxContainer" groups=["voiceButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
theme_override_constants/icon_max_width = 75
toggle_mode = true
icon = ExtResource("4_jy5lg")

[node name="Voice2" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Voice/HBoxContainer" groups=["voiceButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
theme_override_constants/icon_max_width = 75
toggle_mode = true
icon = ExtResource("5_dmrhp")

[node name="Appearance" type="VBoxContainer" parent="CanvasLayer/CCmenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/CCmenu/VBoxContainer/Appearance"]
layout_mode = 2
theme = ExtResource("2_xsp0k")
text = "Appearance"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CCmenu/VBoxContainer/Appearance"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Red" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Appearance/HBoxContainer" groups=["appearenceButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
theme_override_constants/icon_max_width = 200
toggle_mode = true
text = "
"
icon = ExtResource("6_opftc")

[node name="Blue" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Appearance/HBoxContainer" groups=["appearenceButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
theme_override_constants/icon_max_width = 200
toggle_mode = true
text = "
"
icon = ExtResource("7_bddyq")

[node name="Orange" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Appearance/HBoxContainer" groups=["appearenceButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
theme_override_constants/icon_max_width = 200
toggle_mode = true
text = "
"
icon = ExtResource("8_uo287")

[node name="Pink" type="Button" parent="CanvasLayer/CCmenu/VBoxContainer/Appearance/HBoxContainer" groups=["appearenceButtons"]]
layout_mode = 2
theme = ExtResource("2_jb8hu")
theme_override_constants/icon_max_width = 200
toggle_mode = true
text = "
"
icon = ExtResource("9_fxh0o")

[node name="Confirm" type="Button" parent="CanvasLayer/CCmenu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 800.0
offset_top = 40.0
offset_right = -800.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_jb8hu")
theme_override_constants/icon_max_width = 200
text = "Confirm"

[connection signal="pressed" from="CanvasLayer/CCmenu/Confirm" to="." method="on_character_creation_confirm"]
